syntax = "proto3";
package tiny_muduo;

message Query {
  int64 id = 1;
  string questioner = 2;

  repeated string question = 3;
}

message Answer {
  int64 id = 1;
  string questioner = 2;
  string answerer = 3;

  repeated string solution = 4;
}

message Empty {
  oneof option{
  	int32 id = 1;
  }
}
